EndPoint Aula echo / Falta arreglar la eliminacion y el guardado
